Revision history for Plack-Middleware-Statsd

{{$NEXT}}
  [Tests]
  - Added more author tests.

v0.8.1    2025-08-07 13:09:52+01:00 Europe/London
  [Documentation]
  - Added SUPPORT section and merged BUGS into it.

  - README is now generated by Dist::Zilla::Plugin::UsefulReadme.

  - Removed the INSTALL file.

  [Tests]
  - Added more author tests.

  - Moved author tests into the xt directory.

  [Toolchain]
  - Ensure local-lib is not included in distribution.

  - Update GutHub workflow.

  - Do not rebuild MANIFEST.SKIP.

v0.8.0    2025-05-13 13:07:16+01:00 Europe/London
  [Security]
  - Stats for request methods are only counted for ASCII words, anything else is counted as "other".

  - Stats for content types are only counted for well-formed types.

  [Documentation]
  - Added a security policy.

  - Added a How to Contribute document

  - Removed redundant heading.

  - Updated copyright year.

v0.7.1    2024-07-20 12:52:04+01:00 Europe/London
  [Documentation]
  - Updated copyright year,

  [Tests]
  - Updated author tests.

v0.7.0    2024-07-13 12:51:37+01:00 Europe/London
  [Enhancements]
  - Code was adapted to use newer syntax features.

  [Incompatible Changes]
  - Bumped minimum version of Perl to v5.20.

v0.6.3    2023-06-15 19:45:18+01:00 Europe/London
  [Enhancements]
  - Revert to using Try::Tiny instead of Feature::Compat::Try, since the former is already used by Plack.

  [Documentation]
  - Reformated KNOWN ISSUES section.

  - Clarified support policy for older Perl versions.

  - Bumped copyright year.

v0.6.2    2022-12-11 16:07:04+00:00 Europe/London
  [Enhancements]
  - Simplified code for tracking Content-Type headers.

  [Documentation]
  - Documented support for older Perl versions.

  - Fixed typo.

  - Added note about psgix.informational callback.

  [Other]
  - Removed redundant import.

  - Added GitHub Actions to run tests.

  [Tests]
  - Added missing author prereq for Test::Vars.
