@@ -39,8 +39,10 @@ to a statsd server.
 
 # RECENT CHANGES
 
-Changes for version v0.8.2 (2025-08-10)
+Changes for version v0.8.2 (2025-08-11)
 
+- Documentation
+    - Removed redundant section.
 - Tests
     - Added more author tests.
 
